# larp-kardia-asterion

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md
clients/dashboard/: package.json  vite.config.ts
clients/dashboard/src/: App.tsx  definitions.tsx  gameContext.tsx  main.tsx  theme.tsx
clients/esp32/: Pipfile  README.md  testrest.py  testserver.py
clients/esp32/battle-mode/: boot.py  main.py
clients/esp32/common/: boot.py  config.py  loops.py  switch.py  wifi.py
clients/esp32/resttest/: boot.py  main.py
clients/esp32/sonar-buttons/: boot.py  config.py  inputs.py  main.py
clients/sound/: Pipfile  README.md  definitions.py  main.py
server/: Pipfile  pyproject.toml
server/src/serenity/: config.py
server/src/serenity/api/: main copy.py  main.py  test.py  websockets.py  websockets_manager.py
server/src/serenity/common/: adapter.py  config.py  definitions.py  dict_convertible.py  has_model.py  io.py  persistable.py  redis_client.py  service.py
server/src/serenity/defaults/: planet_graph.json  switches.json
server/src/serenity/defaults/maps/: alpha.json  bravo.json  charlie.json
server/src/serenity/light/: definitions.py  light_service.py
server/src/serenity/sonar/: actors.py  definitions.py  exceptions.py  game_config.py  logic.py  main.py  sonar_service.py
server/src/serenity/sound/: definitions.py  sound_service.py
server/src/serenity/switch/: definitions.py  switch_service.py
server/src/serenity/travel/: definitions.py  exceptions.py  nx_to_flow_adapter.py  nx_to_flow_converter.py  planet_graph.py  travel_service.py
(+16 files in other folders)
