# Packaging
# --------------------------------------

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "serenity"
version = "1.0.0"
authors = [
    { name = "Thibault Viglino", email = "tviglino@gmail.com" },
]

# Linters
# --------------------------------------

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.master]
load-plugins = "pylint.extensions.docparams, pylint.extensions.docstyle"

[tool.pylint.messages_control]
disable = """
fixme,
too-few-public-methods,
missing-module-docstring,
duplicate-code,
"""
extension-pkg-whitelist = "pydantic"

[tool.pylint.basic]
variable-rgx = "^[a-z][a-z0-9_]*$|^[Xy]$"
argument-rgx = "^[a-z][a-z0-9_]*$"

[tool.pylint.format]
max-line-length = "120"

[tool.pydocstyle]
add-ignore = "D107, D104, D103"
convention = "google"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
